fix gap between marker and text in list items

--- a/css/style.css
+++ b/css/style.css
@@ -122,6 +122,10 @@ ol li::marker {
   font-weight: bold;
 }
 
+li {
+  padding-left: 1rem;
+}
+
 main {
   background-color: white;
 }
